fixed hamburger position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,9 @@
   main#home h1 .lg-heading {
     font-size: 3rem;
   }
+  .menu-btn {
+    right: 2rem;
+  }
 }
 
 * {
