--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -54,6 +54,10 @@
         .lg-heading {
             font-size: 3rem;
         }
+        
+    }
+    .menu-btn {
+        right: 2rem;
     }
 }
 
